# mcp_fivetran

./: .env.example  .gitignore  README.md  configuration.json  connector.py  main.py  mcp_five_tran.py  pyproject.toml  requirements.txt  run_server.sh
src/mcp_five_tran.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
