[tool.poetry]
name = "mcp_five_tran"
version = "0.1.0"
description = "MCP Server for Fivetran"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
mcp = { version = ">=1.7.1", extras = ["cli"] }
fivetran_connector_sdk = "==1.3.4"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
